# ignyt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  bootstrap.ps1  deploy.ps1  deploy.sh  firebase.json  firestore.indexes.json  firestore.rules  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: checkin.py  concierge.py  photos.py  router.py
backend/app/core/: budget.py  config.py  dependencies.py  rate_limit.py  recaptcha.py  security.py  security_headers.py
backend/app/models/: __init__.py  checkin.py  common.py  concierge.py  photos.py
backend/app/repositories/: attendee_repo.py
backend/app/services/: gemini.py  storage.py  vision.py
backend/scripts/: export_openapi.py  grant_organizer.py
backend/tests/: conftest.py  test_attendee_repo.py  test_budget.py  test_budget_properties.py  test_checkin_api.py  test_concierge_api.py  test_config.py  test_contract.py  test_gemini_service.py  test_health.py  test_models.py  test_photos_api.py  test_rate_limit.py  test_router.py  test_security.py  test_security_headers.py  test_storage_service.py  test_vision_service.py
docs/: API.md  ARCHITECTURE.md  TESTING.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/coverage/: coverage-final.json  coverage-summary.json  index.html  lcov.info
frontend/coverage/components/features/: CheckIn.tsx.html  ConciergeChat.tsx.html  EngagementWall.tsx.html  PhotoBoard.tsx.html  QrScanner.tsx.html  index.html
frontend/coverage/components/ui/: ErrorBoundary.tsx.html  Icons.tsx.html  index.html
frontend/coverage/hooks/: index.html  useAuth.ts.html  useFirestore.ts.html
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/components/features/: CheckIn.tsx.html  ConciergeChat.tsx.html  EngagementWall.tsx.html  PhotoBoard.tsx.html  QrScanner.tsx.html  index.html
frontend/coverage/lcov-report/components/ui/: ErrorBoundary.tsx.html  Icons.tsx.html  index.html
frontend/coverage/lcov-report/hooks/: index.html  useAuth.ts.html  useFirestore.ts.html
frontend/coverage/lcov-report/lib/: api.ts.html  constants.ts.html  demoData.ts.html  firebase.ts.html  index.html
frontend/coverage/lcov-report/pages/: Admin.tsx.html  EventPage.tsx.html  index.html
frontend/coverage/lib/: api.ts.html  constants.ts.html  demoData.ts.html  firebase.ts.html  index.html
frontend/coverage/pages/: Admin.tsx.html  EventPage.tsx.html  index.html
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/components/auth/: AuthGate.tsx
frontend/src/components/features/: CheckIn.tsx  ConciergeChat.tsx  EngagementWall.tsx  PhotoBoard.tsx  QrScanner.tsx
frontend/src/components/features/__tests__/: CheckIn.test.tsx  ConciergeChat.test.tsx  EngagementWall.test.tsx  PhotoBoard.test.tsx  QrScanner.test.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/ui/: ErrorBoundary.tsx  Icons.tsx
frontend/src/components/ui/__tests__/: ErrorBoundary.test.tsx  Icons.test.tsx
frontend/src/hooks/: useAuth.ts  useFirestore.ts  useRecaptcha.ts
frontend/src/hooks/__tests__/: useAuth.test.ts  useFirestore.test.ts
frontend/src/lib/: api.ts  authErrors.test.ts  authErrors.ts  constants.ts  demoData.ts
frontend/src/lib/__tests__/: api.test.ts  constants.test.ts  demoData.test.ts  firebase.test.ts
frontend/src/pages/: Admin.tsx  EventPage.tsx  NotFound.tsx
frontend/src/pages/__tests__/: Admin.test.tsx  EventPage.test.tsx
frontend/src/types/: index.ts
frontend/src/types/__tests__/: models.test.ts
frontend/tests/e2e/: README.md  smoke.spec.ts
tests/rules/: README.md  firestore.test.ts  package.json  tsconfig.json  vitest.config.ts
